--- a/assets/dev/scss/frontend/widgets/heading.scss
+++ b/assets/dev/scss/frontend/widgets/heading.scss
@@ -5,19 +5,19 @@
     .qazana-heading-title {
         &.qazana-size- {
             &small {
-                font-size: 15px;
+                font-size: 1.5rem;
             }
             &medium {
-                font-size: 19px;
+                font-size: 1.9rem;
             }
             &large {
-                font-size: 29px;
+                font-size: 2.9rem;
             }
             &xl {
-                font-size: 39px;
+                font-size: 3.9rem;
             }
             &xxl {
-                font-size: 59px;
+                font-size: 5.9rem;
             }
         }
     }
