--- a/assets/dev/scss/frontend/widgets/icon-list.scss
+++ b/assets/dev/scss/frontend/widgets/icon-list.scss
@@ -1,34 +1,276 @@
 //
 // Icon List
 //
-.qazana-widget-icon-list {
+
+.qazana-widget {
+
+	.qazana-icon-list-items.qazana-inline-items {
+		margin-right: -8px;
+		margin-left: -8px;
+
+		.qazana-icon-list-item {
+			margin-right: 8px;
+			margin-left: 8px;
+
+			&:after {
+				width: auto;
+				left: auto;
+				right: auto;
+				position: relative;
+				height: 100%;
+				top: 50%;
+				transform: translateY(-50%);
+				border-top: 0;
+				border-bottom: 0;
+				border-right: 0;
+				border-left-width: 1px;
+				border-style: solid;
+				@include end(-8px);
+			}
+		}
+	}
 
 	.qazana-icon-list-items {
 		list-style-type: none;
 		margin: 0;
 		padding: 0;
-
 	}
 
 	.qazana-icon-list-item {
 		margin: 0;
 		padding: 0;
+		position: relative;
+
+		&:after {
+			position: absolute;
+			bottom: 0;
+			width: 100%;
+		}
+
+		&, a {
+			display: flex;
+			align-items: flex-start;
+		}
 
 		a {
-			display: inline;
+			width: 100%;
 		}
 	}
 
-	.qazana-icon-list-text {
-		display: inline;
-		vertical-align: middle;
+	.qazana-icon-list-icon + .qazana-icon-list-text {
+		align-self: center;
+		@include padding-start(5px);
 	}
 
 	.qazana-icon-list-icon {
-		width: 1em;
-		line-height: 1;
-		vertical-align: middle;
-		display: inline-block; // fix issue #620
-		text-align: center; // fix issue #620
+		flex-shrink: 0;
+	}
+
+	&.qazana-align-center {
+
+		.qazana-icon-list-item {
+
+			&, a {
+				justify-content: center;
+			}
+
+			&:after {
+				margin: auto;
+			}
+		}
+
+		.qazana-inline-items {
+			justify-content: center;
+		}
+	}
+
+	&.qazana-align-left {
+
+		.qazana-icon-list-item {
+
+			&, a {
+				justify-content: getValueByDirection(flex-start, flex-end);
+				text-align: left;
+			}
+		}
+
+		.qazana-inline-items {
+			justify-content: getValueByDirection(flex-start, flex-end);
+		}
+	}
+
+	&.qazana-align-right {
+
+		.qazana-icon-list-item {
+
+			&, a {
+				justify-content: getValueByDirection(flex-end, flex-start);
+				text-align: right;
+			}
+		}
+
+		.qazana-icon-list-items {
+			justify-content: getValueByDirection(flex-end, flex-start);
+		}
+	}
+
+	&:not(.qazana-align-right) {
+
+		.qazana-icon-list-item {
+
+			&:after {
+				@include start(0);
+			}
+		}
+	}
+
+	&:not(.qazana-align-left) {
+
+		.qazana-icon-list-item {
+
+			&:after {
+				@include end(0);
+			}
+		}
+	}
+
+	@media (max-width: $screen-md-max) {
+		&.qazana-tablet-align-center {
+
+			.qazana-icon-list-items {
+				justify-content: center;
+			}
+
+			.qazana-icon-list-item {
+
+				&, a {
+					justify-content: center;
+				}
+
+				&:after {
+					margin: auto;
+				}
+			}
+		}
+
+		&.qazana-tablet-align-left {
+
+			.qazana-icon-list-items {
+				justify-content: getValueByDirection( flex-start, flex-end );
+			}
+
+			.qazana-icon-list-item {
+
+				&, a {
+					justify-content: getValueByDirection( flex-start, flex-end );
+					text-align: left;
+				}
+			}
+		}
+
+		&.qazana-tablet-align-right {
+
+			.qazana-icon-list-items {
+				justify-content: getValueByDirection( flex-end, flex-start );
+			}
+
+			.qazana-icon-list-item {
+
+				&, a {
+					justify-content: getValueByDirection( flex-end, flex-start );
+					text-align: right;
+				}
+			}
+		}
+
+		&:not(.qazana-tablet-align-right) {
+
+			.qazana-icon-list-item {
+
+				&:after {
+					@include start(0);
+				}
+			}
+		}
+
+		&:not(.qazana-tablet-align-left) {
+
+			.qazana-icon-list-item {
+
+				&:after {
+					@include end(0);
+				}
+			}
+		}
+	}
+
+	@media (max-width: $screen-sm-max) {
+		&.qazana-mobile-align-center {
+
+			.qazana-icon-list-items {
+				justify-content: center;
+			}
+
+			.qazana-icon-list-item {
+
+				&, a {
+					justify-content: center;
+				}
+
+				&:after {
+					margin: auto;
+				}
+			}
+		}
+
+		&.qazana-mobile-align-left {
+
+			.qazana-icon-list-items {
+				justify-content: getValueByDirection( flex-start, flex-end );
+			}
+
+			.qazana-icon-list-item {
+
+				&, a {
+					justify-content: getValueByDirection( flex-start, flex-end );
+					text-align: left;
+				}
+			}
+		}
+
+		&.qazana-mobile-align-right {
+
+			.qazana-icon-list-items {
+				justify-content: getValueByDirection( flex-end, flex-start );
+			}
+
+			.qazana-icon-list-item {
+
+				&, a {
+					justify-content: getValueByDirection( flex-end, flex-start );
+					text-align: right;
+				}
+			}
+		}
+
+		&:not(.qazana-mobile-align-right) {
+
+			.qazana-icon-list-item {
+
+				&:after {
+					@include start(0);
+				}
+			}
+		}
+
+		&:not(.qazana-mobile-align-left) {
+
+			.qazana-icon-list-item {
+
+				&:after {
+					@include end(0);
+				}
+			}
+		}
 	}
 }
