--- a/includes/extensions/counter/assets/css/direction/style-rtl.css
+++ b/includes/extensions/counter/assets/css/direction/style-rtl.css
@@ -1,47 +1,50 @@
-.qazana-counter .qazana-counter-number-wrapper {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  color: #222;
-  text-align: center;
-  font-weight: 600;
-  font-size: 69px;
-  line-height: 1; }
-
-.qazana-counter .qazana-counter-number-prefix {
-  -webkit-box-flex: 1;
-  -webkit-flex-grow: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+.qazana-widget-counter .qazana-counter-number-prefix {
+  flex-grow: 1;
   text-align: right; }
 
-.qazana-counter .qazana-counter-number-suffix {
-  -webkit-box-flex: 1;
-  -webkit-flex-grow: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+.qazana-widget-counter .qazana-counter-number-suffix {
+  flex-grow: 1;
   text-align: left; }
 
-.qazana-counter .qazana-counter-title {
-  color: #666666;
-  text-align: center;
-  font-weight: 400;
-  font-size: 19px;
-  line-height: 2.5; }
+@media (min-width: 768px) {
+  .qazana-widget-counter.qazana-position-left .qazana-counter, .qazana-widget-counter.qazana-position-right .qazana-counter {
+    display: flex;
+    align-items: center; }
+  .qazana-widget-counter.qazana-position-right .qazana-counter {
+    text-align: right;
+    flex-direction: row-reverse; }
+  .qazana-widget-counter.qazana-position-left .qazana-counter {
+    text-align: left;
+    flex-direction: row; }
+  .qazana-widget-counter.qazana-position-top .qazana-counter-number {
+    margin: auto;
+    text-align: center; }
+  .qazana-widget-counter.qazana-vertical-align-top .qazana-counter {
+    align-items: flex-start; }
+  .qazana-widget-counter.qazana-vertical-align-middle .qazana-counter {
+    align-items: center; }
+  .qazana-widget-counter.qazana-vertical-align-bottom .qazana-counter {
+    align-items: flex-end; } }
 
-.qazana-counter .qazana-counter-subtitle {
-  color: #666666;
-  text-align: center;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.5; }
+@media (max-width: 767px) {
+  .qazana-widget-counter .qazana-counter-number {
+    margin-left: auto !important;
+    margin-right: auto !important;
+    margin-bottom: 15px; } }
+
+.qazana-widget-counter .qazana-counter {
+  width: 100%; }
+
+.qazana-widget-counter .qazana-counter-number {
+  display: flex; }
+
+.qazana-widget-counter .qazana-counter-title a {
+  color: inherit; }
+
+.qazana-widget-counter .qazana-counter {
+  text-align: center; }
+
+.qazana-widget-counter .qazana-counter-description {
+  margin: 0; }
+
 /*# sourceMappingURL=style-rtl.css.map */
